Thu Nov 21 18:47:29 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (SimpleDelegator#__getobj__): target object must be set.

	* lib/delegate.rb (DelegateClass#__getobj__): ditto.

Thu Nov 21 18:28:42 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#initialize): use class method to get rid
	  of warnings when $VERBOSE.

Thu Nov 21 17:43:29 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename initial_xxx variables to gc_params.xxx.
	  They are not only used initial values.

	  Chikanaga-san: Congratulations on RubyPrize!

Thu Nov 21 17:16:00 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: enable "RGENGC_ESTIMATE_OLDSPACE" option as default.
	  Without this option, some application consumes huge memory.
	  (and there are only a few performance down)

	  Introduced new environment variables:
	  * RUBY_GC_HEAP_OLDSPACE (default 16MB)
	  * RUBY_GC_HEAP_OLDSPACE_MAX (default 128 MB)
	  * RUBY_GC_HEAP_OLDSPACE_GROWTH_FACTOR (default 1.2)

	* gc.c (initial_malloc_limit): rename to initial_malloc_limit_min.

Thu Nov 21 16:51:34 2013  Zachary Scott  <e@zzak.io>

	* ext/digest/bubblebabble/bubblebabble.c: Teach RDoc digest/bubblebabble

Thu Nov 21 16:50:16 2013  Zachary Scott  <e@zzak.io>

	* test/digest/test_digest.rb: Add more tests for digest/bubblebabble

Thu Nov 21 16:32:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (Delegator#method_missing): try private methods defined in
	  Kernel after the target.  [Fixes GH-449]

Thu Nov 21 16:25:08 2013  Akinori MUSHA  <knu@iDaemons.org>

	* test/uri/test_generic.rb (URI#test_merge): Test uri + URI(path)
	  in addition to uri + path.

Thu Nov 21 15:36:08 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/lib/openssl/buffering.rb: [DOC] Fix HEREDOC comment for
	  OpenSSL::Buffering which breaks overview because of RDoc bug

Thu Nov 21 14:46:57 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval_intern.h (SAVE_ROOT_JMPBUF): workaround for the failure of